--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_game">GameActivity</string>
     <string name="title_activity_question">QuestionActivity</string>
+    <string name="title_activity_image_question">ImageQuestionActivity</string>
+    <string name="title_activity_chapter_detail">ChapterDetailActivity</string>
 </resources>
