--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <resources>
-    <string name="app_name">HocLichSu</string>
+    <string name="app_name">Theo Dòng Sử Việt</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_game">GameActivity</string>
-    <string name="title_activity_question">QuestionActivity</string>
-    <string name="title_activity_image_question">ImageQuestionActivity</string>
-    <string name="title_activity_chapter_detail">ChapterDetailActivity</string>
+    <string name="title_activity_game"></string>
+    <string name="title_activity_question">Câu hỏi</string>
+    <string name="title_activity_image_question">Trả lời hình nền</string>
+    <string name="title_activity_chapter_detail">Nhân vật - Sự kiện</string>
 </resources>
